Set minimum-stability.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "name": "Francesco Pezzella",
     "email": "franzpezzella@gmail.com"
   }],
+  "minimum-stability": "dev",
   "require": {
     "php": ">=5.4.0",
     "jms/serializer": "1.0.0"
