--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,27 @@
     "name": "Francesco Pezzella",
     "email": "franzpezzella@gmail.com"
   }],
-  "minimum-stability": "dev",
   "require": {
-    "php": ">=5.4.0",
-    "jms/serializer": "1.0.0"
+    "php": ">=8.0.0",
+    "jms/serializer": "3.x.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.0.*",
-    "mustangostang/spyc": "0.5.*@dev",
-    "satooshi/php-coveralls": "dev-master"
+    "phpunit/phpunit": "11.x.*",
+    "mustangostang/spyc": "0.6.*@dev"
   },
   "autoload": {
     "psr-4": {
       "Franzip\\SerpPageSerializer\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Franzip\\SerpPageSerializer\\": "test/"
+    }
+},
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2.x-dev"
+      "dev-master": "1.0.x-dev"
     }
   }
 }
